rml-io source functionality (#452)
* use netty http client

* add support for decompression of sources

* replace univocity with fast-csv

* init csvw support

* refactor logical source resolvers

* wire csvw source

* support rml:null

* update for new io functionality

* refactor source resolving

* update dependencies

* update io test cases

* refactor reference formulations and source resolver binding

* support xml namespaces in xpath reference formulation

* minor fixes

* rename decompressor to compressions and add tests

* add encodings test